fixed sports and culture perspectives question

--- a/index.html
+++ b/index.html
@@ -172,21 +172,12 @@ https://templatemo.com/tm-549-business-oriented
               <hr class="mb-5 tm-hr" />
               <p class="mb-5">
                 Foreign workers
-Toiling and suffering, aiming to construct something for a joyous event
-Being forced to work to survive after escaping their country
-Having hopes of a better life crushed
-"Migrant workers often go to Qatar in the hope of giving their families a better life - instead many people return home penniless after spending months chasing their wages, with too little help from the systems that are supposed to protect them." (BBC, 2019)
-Qatar government
-Deciding the most efficient way to build the FIFA stadium
-Making the decision to exploit migrant workers
-Acting proud of their plan 
-Qataris
-Ignorance of the situation for some
-Indifference for some
-Fervent protest for others
-FIFA
-Conflict between the FIFA mission 
-Develop the Game, Touch the World, Build a Better Future
+                <br> <br>
+                Qatar government
+                <br> <br>
+                FIFA
+                <br> <br>
+                NGOS
 
               </p>
             </div>
